# KMSkmm

./: .gitignore  CMakeLists.txt
cmake/: KMSkmm-1.0Config.cmake
include/: kmm.h
src/: CMakeLists.txt  derive_transfer_vector_size.cc  fitted_values.cc  get_transfer_vector.cc  initialize.cc  kmm.cc  load_data.cc  save.cc  transfer.cc
test/derive_transfer_vector_size/: CMakeLists.txt  test.cc
test/fit/: CMakeLists.txt  data (copy).csv  data.csv  test.cc
test/fitted_values/: CMakeLists.txt  solution.csv  solution.ods  test.cc
test/fitted_values/target_output/: fitted_values.csv
test/kmm/: CMakeLists.txt  test.cc
